# sage_binary

./: ChangeLog  README.md  environment.yml  pyproject.toml  rever.xsh  sage_binary.yml
.github/workflows/: conda.yml  doc.yml  lint.yml  test.yml
doc/: conf.py  example.md  index.rst
docs/: .buildinfo  example.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
pack/: unpack.sh
recipe/: meta.yaml
sage_binary/: testing.py
