[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage_binary"
version = "0.0.1"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "Provide Sage binaries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = [
    "sage_binary",
]
